--- a/_includes/main-loop-card.html
+++ b/_includes/main-loop-card.html
@@ -7,7 +7,7 @@
 	   {{ post.excerpt  | strip_html | strip_newlines | truncate: 186}}
 	</p>
 	<small class="d-block text-muted">
-		In <span class="catlist">
+		<span class="catlist">
 		{% for category in post.categories %}
 		<a class="text-capitalize text-muted smoothscroll" href="{{site.baseurl}}/categories.html#{{ category | downcase }}">{{ category }}</a><span class="sep">, </span>
 		{% endfor %}
@@ -18,7 +18,7 @@
 	</small>
 </div>
 {% if post.image %}
-	<div class="col-md-3 pr-0 text-right">
+	<div class="col-4 pr-0 text-right">
 	<a href="{{site.baseurl}}{{post.url}}">
 	<img class="w-100" src="{% if post.image contains "://" %}{{ post.image }}{% else %}{{ site.baseurl }}/{{ post.image }}{% endif %}" alt="{{ post.title }}">
 	</a>
