--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,11 +74,11 @@
         <div class="container">
         <div class="row align-items-center justify-content-between">
             <div>
-                <span class="navbar-brand mr-2 mb-0"><strong>全部生命</strong></span>
+                <span class="navbar-brand mr-2 mb-0"><strong>The Totality of Life</strong></span>
                 <span>Copyright © <script>document.write(new Date().getFullYear())</script>.</span>
 
                 <!--  Github Repo Star Btn-->
-                <a class="text-dark ml-1" target="_blank" href="https://www.facebook.com/TheTotalityOfLife"><i class="fab fa-facebook"></i> Facebook</a>
+                <a class="text-dark ml-1" target="_blank" href="https://www.facebook.com/TheTotalityOfLife"><i class="fab fa-facebook"></i> Find us on Facebook</a>
 
             </div>
         </div>
