--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ layout: default
                         {% endfor %}
                         </span>
 					</p>
-					<h1 class="display-4 mb-2 article-headline">{{ page.title }}</h1>
+					<h1 class="mb-2 article-headline">{{ page.title }}</h1>
 					<h4 class="mb-4 text-muted">{{ page.subtitle }}</h4>
 					<div class="d-flex align-items-center">
                             <span class="text-muted d-block mt-1">{{ page.date | date: '%b %d, %Y' }}</span>
