--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,25 +67,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 
     <script src="{{site.baseurl}}/assets/js/theme.js"></script>
-
-
-    <!-- Footer -->
-    <footer class="bg-white border-top p-3 text-muted small">
-        <div class="container">
-        <div class="row align-items-center justify-content-between">
-            <div>
-                <span class="navbar-brand mr-2 mb-0"><strong>The Totality of Life</strong></span>
-                <span>Copyright © <script>document.write(new Date().getFullYear())</script>.</span>
-
-                <!--  Github Repo Star Btn-->
-                <a class="text-dark ml-1" target="_blank" href="https://www.facebook.com/TheTotalityOfLife"><i class="fab fa-facebook"></i> Find us on Facebook</a>
-
-            </div>
-        </div>
-        </div>
-    </footer>
-
-    {% include tracking-footer.html %}
+    
+    {% include links.html %}
+    
+    {% include footer.html %}
 
 </body>
 
