--- a/_includes/links.html
+++ b/_includes/links.html
@@ -13,22 +13,26 @@
                         <li>
                             <a
                                 href="https://apps.apple.com/us/app/全部生命/id1562059559"
+                                class="text-dark"
                                 >iOS 蘋果安裝</a
                             >
                         </li>
                         <li>
                             <a
                                 href="https://play.google.com/store/apps/details?id=app.totality"
+                                class="text-dark"
                                 >Android 安卓安裝</a
                             >
                         </li>
                         <li>
                             <a href="https://store.totality-of-life.com"
+                            class="text-dark"
                                 >報名課程</a
                             >
                         </li>
                         <li>
                             <a href="https://join.totality-of-life.com"
+                            class="text-dark"
                                 >開通序號</a
                             >
                         </li>
@@ -44,18 +48,21 @@
                         <li>
                             <a
                                 href="https://search.books.com.tw/search/query/key/楊定一?sloc=reprod_k_1"
+                                class="text-dark"
                                 >博客來網路書店</a
                             >
                         </li>
                         <li>
                             <a
                                 href="https://shop.cwbook.com.tw/v2/Search?q=楊定一&shopId=40358"
+                                class="text-dark"
                                 >天下網路書店</a
                             >
                         </li>
                         <li>
                             <a
                                 href="https://www.kingstone.com.tw/search/key/楊定一?"
+                                class="text-dark"
                                 >金石堂網路書店</a
                             >
                         </li>
@@ -71,30 +78,35 @@
                         <li>
                             <a
                                 href="https://www.kobo.com/tw/zh/search?query=楊定一&ac=1&acp=%22楊定一%22&ac.author=楊定一&pageNumber=1"
+                                class="text-dark"
                                 >Kobo</a
                             >
                         </li>
                         <li>
                             <a
                                 href="https://readmoo.com/search/keyword?q=楊定一&kw=楊定一&pi=0&st=true"
+                                class="text-dark"
                                 >Readmoo</a
                             >
                         </li>
                         <li>
                             <a
                                 href="https://search.books.com.tw/search/query/cat/6/qsub/E05/key/楊定一/adv_author/1/sort/1/c/1"
+                                class="text-dark"
                                 >博客來</a
                             >
                         </li>
                         <li>
                             <a
                                 href="https://www.amazon.com/s?k=楊定一&i=digital-text&dm=true&ref=sr_moz_back"
+                                class="text-dark"
                                 >Amazon</a
                             >
                         </li>
                         <li>
                             <a
                                 href="https://play.google.com/store/search?q=楊定一&c=books"
+                                class="text-dark"
                                 >Google Play 圖書</a
                             >
                         </li>
@@ -108,13 +120,27 @@
 
                     <ul class="list-unstyled mb-0">
                         <li>
-                            <a href="https://www.facebook.com/TheTotalityOfLife"
-                                ><i class="fab fa-facebook"></i
-                                > 楊定一博士．全部生命系列</a
+                            <a
+                                href="https://www.youtube.com/@totality-of-life"
+                                class="text-dark"
+                                ><i class="fab fa-youtube p-1"></i> Youtube</a
                             >
                         </li>
                         <li>
-                            <a href="mailto:totalityhelp@gmail.com">totalityhelp@gmail.com</a>
+                            <a
+                                href="https://www.facebook.com/TheTotalityOfLife"
+                                class="text-dark"
+                                ><i class="fab fa-facebook p-1"></i> Facebook</a
+                            >
+                        </li>
+
+                        <li>
+                            <a
+                                href="mailto:totalityhelp@gmail.com"
+                                class="text-dark"
+                            >
+                                totalityhelp@gmail.com</a
+                            >
                         </li>
                     </ul>
                 </div>
