--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta charset="utf-8">
 
-  <link rel="stylesheet" href="{{ get_url(path="styles/styles.css") | safe }}" />
+  <link rel="stylesheet" href="/styles/styles.css" />
 
   <title>{% if section -%}{{ section.title }} | {% endif %} {% if page -%}{{ page.title }} | {% endif %} {{ config.title }} </title>
 
