--- a/templates/page.html
+++ b/templates/page.html
@@ -1,14 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="mx-auto max-w-4xl px-4 sm:px-6 md:px-8 xl:px-12">
-  <div class="py-8 flex">
-    <h1 class="grow font-bold font-sans break-normal text-gray-900 text-3xl">{{ page.title }}</h1>
-  </div>
+<main class="container">
 
-
-  <article class="prose prose-a:text-blue-600 hover:prose-a:text-blue-500 max-w-4xl">
+  <h1>{{ page.title }}</h1>
+  <div>
     {{ page.content | safe }}
-  </article>
-</div>
+  </div>
+</main>
 {% endblock content %}
