--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,206 +1,117 @@
-<footer class="bg-white" aria-labelledby="footer-heading">
-  <h2 id="footer-heading" class="sr-only">Footer</h2>
-  <div class="mx-auto max-w-4xl px-6 pb-8 pt-24 lg:px-8 lg:pt-32">
-    <div
-      class="xl:grid xl:grid-cols-3 xl:gap-8 border-t border-gray-900/10 pt-16"
-    >
-      <div class="space-y-8">
-        <img
-          class="h-7"
-          src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600"
-          alt="Company name"
-        />
-        <p class="text-sm leading-6 text-gray-600">
-          Making the world a better place through constructing elegant
-          hierarchies.(據說是設計來寫願景)
-        </p>
-        <div class="flex space-x-6">
-          <a
-            href="https://www.facebook.com/TheTotalityOfLife"
-            class="text-gray-400 hover:text-gray-500"
-          >
-            <span class="sr-only">Facebook</span>
-            <svg
-              class="h-6 w-6"
-              fill="currentColor"
-              viewBox="0 0 24 24"
-              aria-hidden="true"
-            >
-              <path
-                fill-rule="evenodd"
-                d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z"
-                clip-rule="evenodd"
-              />
-            </svg>
+<footer class="container">
+  <div class="grid">
+    <div>
+      <h3>
+        全部生命App
+      </h3>
+      <ul>
+        <li>
+          <a href="https://apps.apple.com/us/app/全部生命/id1562059559">
+            iOS 蘋果安裝
           </a>
-          <a href="#" class="text-gray-400 hover:text-gray-500">
-            <span class="sr-only">Instagram</span>
-            <svg
-              class="h-6 w-6"
-              fill="currentColor"
-              viewBox="0 0 24 24"
-              aria-hidden="true"
-            >
-              <path
-                fill-rule="evenodd"
-                d="M12.315 2c2.43 0 2.784.013 3.808.06 1.064.049 1.791.218 2.427.465a4.902 4.902 0 011.772 1.153 4.902 4.902 0 011.153 1.772c.247.636.416 1.363.465 2.427.048 1.067.06 1.407.06 4.123v.08c0 2.643-.012 2.987-.06 4.043-.049 1.064-.218 1.791-.465 2.427a4.902 4.902 0 01-1.153 1.772 4.902 4.902 0 01-1.772 1.153c-.636.247-1.363.416-2.427.465-1.067.048-1.407.06-4.123.06h-.08c-2.643 0-2.987-.012-4.043-.06-1.064-.049-1.791-.218-2.427-.465a4.902 4.902 0 01-1.772-1.153 4.902 4.902 0 01-1.153-1.772c-.247-.636-.416-1.363-.465-2.427-.047-1.024-.06-1.379-.06-3.808v-.63c0-2.43.013-2.784.06-3.808.049-1.064.218-1.791.465-2.427a4.902 4.902 0 011.153-1.772A4.902 4.902 0 015.45 2.525c.636-.247 1.363-.416 2.427-.465C8.901 2.013 9.256 2 11.685 2h.63zm-.081 1.802h-.468c-2.456 0-2.784.011-3.807.058-.975.045-1.504.207-1.857.344-.467.182-.8.398-1.15.748-.35.35-.566.683-.748 1.15-.137.353-.3.882-.344 1.857-.047 1.023-.058 1.351-.058 3.807v.468c0 2.456.011 2.784.058 3.807.045.975.207 1.504.344 1.857.182.466.399.8.748 1.15.35.35.683.566 1.15.748.353.137.882.3 1.857.344 1.054.048 1.37.058 4.041.058h.08c2.597 0 2.917-.01 3.96-.058.976-.045 1.505-.207 1.858-.344.466-.182.8-.398 1.15-.748.35-.35.566-.683.748-1.15.137-.353.3-.882.344-1.857.048-1.055.058-1.37.058-4.041v-.08c0-2.597-.01-2.917-.058-3.96-.045-.976-.207-1.505-.344-1.858a3.097 3.097 0 00-.748-1.15 3.098 3.098 0 00-1.15-.748c-.353-.137-.882-.3-1.857-.344-1.023-.047-1.351-.058-3.807-.058zM12 6.865a5.135 5.135 0 110 10.27 5.135 5.135 0 010-10.27zm0 1.802a3.333 3.333 0 100 6.666 3.333 3.333 0 000-6.666zm5.338-3.205a1.2 1.2 0 110 2.4 1.2 1.2 0 010-2.4z"
-                clip-rule="evenodd"
-              />
-            </svg>
+        </li>
+        <li>
+          <a href="https://play.google.com/store/apps/details?id=app.totality">
+            Android 安卓安裝
           </a>
-          <a
-            href="https://www.youtube.com/@totality-of-life"
-            class="text-gray-400 hover:text-gray-500"
-          >
-            <span class="sr-only">YouTube</span>
-            <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
-              <path fill-rule="evenodd" d="M19.812 5.418c.861.23 1.538.907 1.768 1.768C21.998 8.746 22 12 22 12s0 3.255-.418 4.814a2.504 2.504 0 0 1-1.768 1.768c-1.56.419-7.814.419-7.814.419s-6.255 0-7.814-.419a2.505 2.505 0 0 1-1.768-1.768C2 15.255 2 12 2 12s0-3.255.417-4.814a2.507 2.507 0 0 1 1.768-1.768C5.744 5 11.998 5 11.998 5s6.255 0 7.814.418ZM15.194 12 10 15V9l5.194 3Z" clip-rule="evenodd" />
-            </svg>
+        </li>
+        <li>
+          <a href="https://store.totality-of-life.com">
+            報名課程
           </a>
-        </div>
-      </div>
-      <div class="mt-16 grid grid-cols-2 gap-8 xl:col-span-2 xl:mt-0">
-        <div class="md:grid md:grid-cols-2 md:gap-8">
-          <div>
-            <h3 class="text-sm font-semibold leading-6 text-gray-900">
-              全部生命App
-            </h3>
-            <ul role="list" class="mt-6 space-y-4">
-              <li>
-                <a
-                  href="https://apps.apple.com/us/app/全部生命/id1562059559"
-                  class="text-sm leading-6 text-gray-600 hover:text-gray-900"
-                  >iOS 蘋果安裝</a
-                >
-              </li>
-              <li>
-                <a
-                  href="https://play.google.com/store/apps/details?id=app.totality"
-                  class="text-sm leading-6 text-gray-600 hover:text-gray-900"
-                  >Android 安卓安裝</a
-                >
-              </li>
-              <li>
-                <a
-                  href="https://store.totality-of-life.com"
-                  class="text-sm leading-6 text-gray-600 hover:text-gray-900"
-                  >報名課程</a
-                >
-              </li>
-              <li>
-                <a
-                  href="https://join.totality-of-life.com"
-                  class="text-sm leading-6 text-gray-600 hover:text-gray-900"
-                  >開通序號</a
-                >
-              </li>
-            </ul>
-          </div>
-          <div class="mt-10 md:mt-0">
-            <h3 class="text-sm font-semibold leading-6 text-gray-900">
-              購買紙本書籍
-            </h3>
-            <ul role="list" class="mt-6 space-y-4">
-              <li>
-                <a
-                  href="https://search.books.com.tw/search/query/key/楊定一?sloc=reprod_k_1"
-                  class="text-sm leading-6 text-gray-600 hover:text-gray-900"
-                  >博客來網路書店</a
-                >
-              </li>
-              <li>
-                <a
-                  href="https://shop.cwbook.com.tw/v2/Search?q=楊定一&shopId=40358"
-                  class="text-sm leading-6 text-gray-600 hover:text-gray-900"
-                  >天下網路書店</a
-                >
-              </li>
-              <li>
-                <a
-                  href="https://www.kingstone.com.tw/search/key/楊定一?"
-                  class="text-sm leading-6 text-gray-600 hover:text-gray-900"
-                  >金石堂網路書店</a
-                >
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="md:grid md:grid-cols-2 md:gap-8">
-          <div>
-            <h3 class="text-sm font-semibold leading-6 text-gray-900">
-              電子書平台
-            </h3>
-            <ul role="list" class="mt-6 space-y-4">
-              <li>
-                <a
-                  href="https://www.kobo.com/tw/zh/search?query=楊定一&ac=1&acp=%22楊定一%22&ac.author=楊定一&pageNumber=1"
-                  class="text-sm leading-6 text-gray-600 hover:text-gray-900"
-                  >Kobo</a
-                >
-              </li>
-              <li>
-                <a
-                  href="https://readmoo.com/search/keyword?q=楊定一&kw=楊定一&pi=0&st=true"
-                  class="text-sm leading-6 text-gray-600 hover:text-gray-900"
-                  >Readmoo</a
-                >
-              </li>
-              <li>
-                <a
-                  href="https://search.books.com.tw/search/query/cat/6/qsub/E05/key/楊定一/adv_author/1/sort/1/c/1"
-                  class="text-sm leading-6 text-gray-600 hover:text-gray-900"
-                  >博客來</a
-                >
-              </li>
-              <li>
-                <a
-                  href="https://www.amazon.com/s?k=楊定一&i=digital-text&dm=true&ref=sr_moz_back"
-                  class="text-sm leading-6 text-gray-600 hover:text-gray-900"
-                  >Amazon</a
-                >
-              </li>
-              <li>
-                <a
-                  href="https://play.google.com/store/search?q=楊定一&c=books"
-                  class="text-sm leading-6 text-gray-600 hover:text-gray-900"
-                  >Google Play 圖書</a
-                >
-              </li>
-            </ul>
-          </div>
-          <div class="mt-10 md:mt-0">
-            <h3 class="text-sm font-semibold leading-6 text-gray-900">Legal</h3>
-            <ul role="list" class="mt-6 space-y-4">
-              <li>
-                <a
-                  href="#"
-                  class="text-sm leading-6 text-gray-600 hover:text-gray-900"
-                  >Claim</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  class="text-sm leading-6 text-gray-600 hover:text-gray-900"
-                  >Privacy</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  class="text-sm leading-6 text-gray-600 hover:text-gray-900"
-                  >Terms</a
-                >
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
+        </li>
+        <li>
+          <a href="https://join.totality-of-life.com">
+            開通序號
+          </a>
+        </li>
+      </ul>
     </div>
-    <div class="mt-16 border-t border-gray-900/10 pt-8 sm:mt-20 lg:mt-24">
-      <p class="text-xs leading-5 text-gray-500">
-        &copy; 2023 The Totality of Life.
-      </p>
+
+    <div>
+      <h3>
+        購買紙本書籍
+      </h3>
+      <ul>
+        <li>
+          <a href="https://search.books.com.tw/search/query/key/楊定一?sloc=reprod_k_1">
+            博客來網路書店
+          </a>
+        </li>
+        <li>
+          <a href="https://shop.cwbook.com.tw/v2/Search?q=楊定一&shopId=40358">
+            天下網路書店
+          </a>
+        </li>
+        <li>
+          <a href="https://www.kingstone.com.tw/search/key/楊定一/adv_au/楊定一">
+            金石堂網路書店
+          </a>
+        </li>
+      </ul>
+    </div>
+
+    <div>
+      <h3>
+        電子書平台
+      </h3>
+      <ul>
+        <li>
+          <a href="https://www.kobo.com/tw/zh/search?query=楊定一&ac=1&acp=%22楊定一%22&ac.author=楊定一&pageNumber=1">
+            Kobo
+          </a>
+        </li>
+        <li>
+          <a href="https://readmoo.com/search/keyword?q=楊定一&kw=楊定一&pi=0&st=true">
+            Readmoo
+          </a>
+        </li>
+        <li>
+          <a href="https://search.books.com.tw/search/query/cat/6/qsub/E05/key/楊定一/adv_author/1/sort/1/c/1">
+            博客來
+          </a>
+        </li>
+        <li>
+          <a href="https://www.amazon.com/s?k=楊定一&i=digital-text&dm=true&ref=sr_moz_back">
+            Amazon
+          </a>
+        </li>
+        <li>
+          <a href="https://play.google.com/store/search?q=楊定一&c=books">
+            Google Play 圖書
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div>
+      <h3>社群網站</h3>
+      <ul>
+        <li>
+          <a href="https://www.facebook.com/TheTotalityOfLife">
+            Facebook
+          </a>
+        </li>
+        <li>
+          <a href="https://www.youtube.com/@totality-of-life">
+            Youtube
+          </a>
+        </li>
+        <li>
+          <a href="https://search.books.com.tw/search/query/cat/6/qsub/E05/key/楊定一/adv_author/1/sort/1/c/1">
+            博客來
+          </a>
+        </li>
+        <li>
+          <a href="https://www.amazon.com/s?k=楊定一&i=digital-text&dm=true&ref=sr_moz_back">
+            Amazon
+          </a>
+        </li>
+        <li>
+          <a href="https://play.google.com/store/search?q=楊定一&c=books">
+            Google Play 圖書
+          </a>
+        </li>
+      </ul>
     </div>
   </div>
 </footer>
