--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,7 +1,9 @@
-<nav>
-  <div class="mx-auto max-w-4xl pb-8 pt-6 px-4 sm:px-6 md:px-8 xl:px-12">
-    <a class="text-2xl leading-7" href="{{config.base_url}}"
-      >{{ config.title }}
-    </a>
-  </div>
+<nav class="container">
+  <ul>
+    <li>
+      <a class="contrast" href="{{config.base_url}}">
+        <strong>{{ config.title }}</strong>
+      </a>
+    </li>
+  </ul>
 </nav>
