--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,4 +1,4 @@
-<nav class="container">
+<!-- <nav class="container">
   <ul>
     <li>
       <a class="contrast" href="{{config.base_url}}">
@@ -6,4 +6,4 @@
       </a>
     </li>
   </ul>
-</nav>
+</nav> -->
