--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
       <p>
         {{page.description}}
       </p>
-      <a href="{{page.path}}">Read more</a>
+      <a href="{{page.path}}">閱讀內容</a>
     </section>
 
     {% endfor -%}
